Java 21 configuration with spring boot, more notes in readme